Add header content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
   <title>Admin Dashboard</title>
 </head>
 <body>
-
+  <div class="main-container">
+    <div class="header">
+      <div class="search-bar">
+        <img src="./img/magnify.svg" alt="magnify">
+        <div></div>
+      </div>
+      <div class="logged-in-user">
+        <img src="./img/bell-alert.svg" alt="bell-alert">
+        <img src="./img/red-bird.png" alt="red-bird">
+        <p>Vladislav Zgoda</p>
+      </div>
+      <div class="greetings">
+        <img src="./img/red-bird.png" alt="red-bird">
+        <div class="greetings-text">
+          <p>Hi there,</p>
+          <p>Vladislav Zgoda(@vladislav)</p>
+        </div>
+      </div>
+      <div class="user-actions">
+        <button type="button">New</button>
+        <button type="button">Upload</button>
+        <button type="button">Share</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
