--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="main-container">
+
     <div class="header">
       <div class="search-bar">
         <img src="./img/magnify.svg" alt="magnify">
@@ -29,6 +30,53 @@
         <button type="button">New</button>
         <button type="button">Upload</button>
         <button type="button">Share</button>
+      </div>
+    </div>
+
+    <div class="sidebar">
+      <div class="sidebar-header">
+        <img src="./img/dashboard.svg" alt="dashboard">
+        <h2>Dashboard</h2>
+      </div>
+      <div class="dashboard-user-menu">
+        <div class="dashboard-row">
+          <img src="./img/home.svg" alt="home">
+          <p>Home</p>
+        </div>
+        <div class="dashboard-row">
+          <img src="./img/profile.svg" alt="profile">
+          <p>Profile</p>
+        </div>
+        <div class="dashboard-row">
+          <img src="./img/message.svg" alt="message">
+          <p>Messages</p>
+        </div>
+        <div class="dashboard-row">
+          <img src="./img/clock.svg" alt="clock">
+          <p>History</p>
+        </div>
+        <div class="dashboard-row">
+          <img src="./img/files.svg" alt="files">
+          <p>Tasks</p>
+        </div>
+        <div class="dashboard-row">
+          <img src="./img/group.svg" alt="group">
+          <p>Communities</p>
+        </div>
+      </div>
+      <div class="dashboard-user-options">
+        <div class="dashboard-row">
+          <img src="./img/cog.svg" alt="cog">
+          <p>Settings</p>
+        </div>
+        <div class="dashboard-row">
+          <img src="./img/help-box.svg" alt="help-box">
+          <p>Support</p>
+        </div>
+        <div class="dashboard-row">
+          <img src="./img/shield-check.svg" alt="shield-check">
+          <p>Privacy</p>
+        </div>
       </div>
     </div>
   </div>
