Add main content

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <div class="logged-in-user">
         <img src="./img/bell-alert.svg" alt="bell-alert">
         <img src="./img/red-bird.png" alt="red-bird">
-        <p>Vladislav Zgoda</p>
+        <p>Morgan Oakley</p>
       </div>
       <div class="greetings">
         <img src="./img/red-bird.png" alt="red-bird">
         <div class="greetings-text">
           <p>Hi there,</p>
-          <p>Vladislav Zgoda(@vladislav)</p>
+          <p>Morgan Oakley(@morgan)</p>
         </div>
       </div>
       <div class="user-actions">
@@ -76,6 +76,153 @@
         <div class="dashboard-row">
           <img src="./img/shield-check.svg" alt="shield-check">
           <p>Privacy</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="main-content">
+      <div class="projects-container">
+        <h3>Your Projects</h3>
+        <div class="card-container">
+          <div class="card">
+            <div class="card-text">
+              <h4>Super Cool Project</h4>
+              <p>
+                Nulla quis pretium felis. Aliquam accumsan metus vel ipsum lobortis volutpat.
+                Suspendisse eget lacus maximus.
+              </p>
+            </div>
+            <div class="card-img">
+              <img src="./img/star.svg" alt="star-plus">
+              <img src="./img/eye.svg" alt="eye-plus">
+              <img src="./img/source-fork.svg" alt="source-fork">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-text">
+              <h4>Less Cool Project</h4>
+              <p>
+                Vivamus elit arcu, consequat vulputate interdum vitae, lacinia eu metus. Nam vel
+                cursus enim, commodo finibus mi. Donec eu tincidunt dui. Integer massa odio,
+                imperdiet ut.
+              </p>
+            </div>
+            <div class="card-img">
+              <img src="./img/star.svg" alt="star-plus">
+              <img src="./img/eye.svg" alt="eye-plus">
+              <img src="./img/source-fork.svg" alt="source-fork">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-text">
+              <h4>Impossible App</h4>
+              <p>
+                Aenean blandit eu metus nec auctor. Fusce elementum facilisis tincidunt. Sed
+                bibendum, tortor eu.
+              </p>
+            </div>
+            <div class="card-img">
+              <img src="./img/star.svg" alt="star-plus">
+              <img src="./img/eye.svg" alt="eye-plus">
+              <img src="./img/source-fork.svg" alt="source-fork">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-text">
+              <h4>Easy Peasy App</h4>
+              <p>
+                Fusce lacinia enim at metus euismod vehicula. Sed finibus purus a tortor dapibus
+                consequat. Integer magna turpis, maximus eget aliquam sed.
+              </p>
+            </div>
+            <div class="card-img">
+              <img src="./img/star.svg" alt="star-plus">
+              <img src="./img/eye.svg" alt="eye-plus">
+              <img src="./img/source-fork.svg" alt="source-fork">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-text">
+              <h4>Ad Blocker</h4>
+              <p>
+                Etiam nisi felis, elementum ut dui non, iaculis tempus lorem. Mauris et
+                vestibulum nisl. Cras in consequat dui.
+              </p>
+            </div>
+            <div class="card-img">
+              <img src="./img/star.svg" alt="star-plus">
+              <img src="./img/eye.svg" alt="eye-plus">
+              <img src="./img/source-fork.svg" alt="source-fork">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-text">
+              <h4>Money Maker</h4>
+              <p>
+                Pellentesque sed porta orci. Integer volutpat turpis quis mauris malesuada
+                sodales. Integer blandit quam at ante tempor bibendum. Donec in nisl posuere,
+                luctus.
+              </p>
+            </div>
+            <div class="card-img">
+              <img src="./img/star.svg" alt="star-plus">
+              <img src="./img/eye.svg" alt="eye-plus">
+              <img src="./img/source-fork.svg" alt="source-fork">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="announce-container">
+        <h3>Announcements</h3>
+        <div class="announce-card">
+          <h5>Site Maintenance</h5>
+          <p>
+            Nam eget nisl ut turpis tincidunt gravida. Cras vel maximus arcu. Nunc pretium.
+          </p>
+        </div>
+        <div class="announce-card">
+          <h5>Community Share Day</h5>
+          <p>
+            Maecenas malesuada porta odio eu feugiat. Nam ut mauris bibendum, consequat mi
+            vitae.
+          </p>
+        </div>
+        <div class="announce-card">
+          <h5>Update Privacy Policy</h5>
+          <p>
+            Aenean pulvinar dapibus urna, vel consequat nibh dapibus ac. Donec eu suscipit
+            tortor. Nullam nec elementum.
+          </p>
+        </div>
+      </div>
+      <div class="trending-container">
+        <div class="trending-card">
+          <img src="./img/119.jpg" alt="blonde-woman">
+          <div class="trending-text">
+            <p>@tegan</p>
+            <p>World Peace Builder</p>
+          </div>
+        </div>
+        <div class="trending-card">
+          <img src="./img/red-bird.png" alt="red-bird">
+          <div class="trending-text">
+            <p>@morgan</p>
+            <p>Super Cool Project</p>
+          </div>
+        </div>
+        <div class="trending-card">
+          <img src="./img/7364701.jpg" alt="dance-woman">
+          <div class="trending-text">
+            <p>@kendal</p>
+            <p>Life Changing App</p>
+          </div>
+        </div>
+        <div class="trending-card">
+          <img src="./img/mario.jpg" alt="mario">
+          <div class="trending-text">
+            <p>@alex</p>
+            <p>No Traffic Maker</p>
+          </div>
         </div>
       </div>
     </div>
