Add header styles

--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
   <div class="main-container">
 
     <div class="header">
-      <div class="search-bar">
-        <img src="./img/magnify.svg" alt="magnify">
-        <div></div>
-      </div>
-      <div class="logged-in-user">
-        <img src="./img/bell-alert.svg" alt="bell-alert">
-        <img src="./img/red-bird.png" alt="red-bird">
-        <p>Morgan Oakley</p>
-      </div>
-      <div class="greetings">
-        <img src="./img/red-bird.png" alt="red-bird">
-        <div class="greetings-text">
-          <p>Hi there,</p>
-          <p>Morgan Oakley(@morgan)</p>
+      <div class="header-container">
+        <div class="search-bar">
+          <img src="./img/magnify.svg" alt="magnify">
+          <div></div>
         </div>
-      </div>
-      <div class="user-actions">
-        <button type="button">New</button>
-        <button type="button">Upload</button>
-        <button type="button">Share</button>
+        <div class="logged-in-user">
+          <img src="./img/bell-alert.svg" alt="bell-alert">
+          <img src="./img/red-bird.png" alt="red-bird">
+          <p>Morgan Oakley</p>
+        </div>
+        <div class="greetings">
+          <img src="./img/red-bird.png" alt="red-bird">
+          <div class="greetings-text">
+            <p>Hi there,</p>
+            <p>Morgan Oakley(@morgan)</p>
+          </div>
+        </div>
+        <div class="user-actions">
+          <button type="button">New</button>
+          <button type="button">Upload</button>
+          <button type="button">Share</button>
+        </div>
       </div>
     </div>
 
