Add styles to main-content

--- a/index.html
+++ b/index.html
@@ -176,54 +176,59 @@
       </div>
       <div class="announce-container">
         <h3>Announcements</h3>
-        <div class="announce-card">
-          <h5>Site Maintenance</h5>
-          <p>
-            Nam eget nisl ut turpis tincidunt gravida. Cras vel maximus arcu. Nunc pretium.
-          </p>
-        </div>
-        <div class="announce-card">
-          <h5>Community Share Day</h5>
-          <p>
-            Maecenas malesuada porta odio eu feugiat. Nam ut mauris bibendum, consequat mi
-            vitae.
-          </p>
-        </div>
-        <div class="announce-card">
-          <h5>Update Privacy Policy</h5>
-          <p>
-            Aenean pulvinar dapibus urna, vel consequat nibh dapibus ac. Donec eu suscipit
-            tortor. Nullam nec elementum.
-          </p>
+        <div class="announce-card-container">
+          <div class="announce-card">
+            <h5>Site Maintenance</h5>
+            <p>
+              Nam eget nisl ut turpis tincidunt gravida. Cras vel maximus arcu. Nunc pretium.
+            </p>
+          </div>
+          <div class="announce-card">
+            <h5>Community Share Day</h5>
+            <p>
+              Maecenas malesuada porta odio eu feugiat. Nam ut mauris bibendum, consequat mi
+              vitae.
+            </p>
+          </div>
+          <div class="announce-card">
+            <h5>Update Privacy Policy</h5>
+            <p>
+              Aenean pulvinar dapibus urna, vel consequat nibh dapibus ac. Donec eu suscipit
+              tortor. Nullam nec elementum.
+            </p>
+          </div>
         </div>
       </div>
       <div class="trending-container">
-        <div class="trending-card">
-          <img src="./img/119.jpg" alt="blonde-woman">
-          <div class="trending-text">
-            <p>@tegan</p>
-            <p>World Peace Builder</p>
+        <h3>Trending</h3>
+        <div class="trending-card-container">
+          <div class="trending-card">
+            <img src="./img/119.jpg" alt="blonde-woman">
+            <div class="trending-text">
+              <p>@tegan</p>
+              <p>World Peace Builder</p>
+            </div>
           </div>
-        </div>
-        <div class="trending-card">
-          <img src="./img/red-bird.png" alt="red-bird">
-          <div class="trending-text">
-            <p>@morgan</p>
-            <p>Super Cool Project</p>
+          <div class="trending-card">
+            <img src="./img/red-bird.png" alt="red-bird">
+            <div class="trending-text">
+              <p>@morgan</p>
+              <p>Super Cool Project</p>
+            </div>
           </div>
-        </div>
-        <div class="trending-card">
-          <img src="./img/7364701.jpg" alt="dance-woman">
-          <div class="trending-text">
-            <p>@kendal</p>
-            <p>Life Changing App</p>
+          <div class="trending-card">
+            <img src="./img/7364701.jpg" alt="dance-woman">
+            <div class="trending-text">
+              <p>@kendal</p>
+              <p>Life Changing App</p>
+            </div>
           </div>
-        </div>
-        <div class="trending-card">
-          <img src="./img/mario.jpg" alt="mario">
-          <div class="trending-text">
-            <p>@alex</p>
-            <p>No Traffic Maker</p>
+          <div class="trending-card">
+            <img src="./img/mario.jpg" alt="mario">
+            <div class="trending-text">
+              <p>@alex</p>
+              <p>No Traffic Maker</p>
+            </div>
           </div>
         </div>
       </div>
